# collaborative-data-imputation

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  config.py  experiment.py  pyproject.toml  requirements.txt
experiments/: experiment_farm_filtering.py  experiment_group_average.py  experiment_lag_farm_filtering.py  experiment_latent_factor.py  experiment_period_filtering.py
source/models/latent_factor/: mlflow_latent_factor.py
source/models/memory/: mlflow_farm_filtering.py  mlflow_lag_farm_filtering.py  mlflow_period_filtering.py
source/models/naive/: mlflow_naive_imputation.py
source/process/: process_general.py
source/statistic/: pair_var.py
source/utils/: utils_factorization.py  utils_general.py  utils_memory.py
tests/: conftest.py  test_utils.py  test_utils_factorization.py  test_utils_general.py  test_utils_memory.py
