[tool.poetry]
name = "collaborative time series data imputation for wind farms"
version = "0.1.0"
description = ""
authors = ["giovanni.buroni <giovanni.buroni@inesctec.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.16.2"
loguru = "^0.7.2"
sortedcontainers = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
